[tool.poetry]
name = "track-your-bites"
version = "0.1.0"
description = ""
authors = ["Guenther Meyer <d.s.e@sordidmusic.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
